5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4413/executions/1671_1105.log
== SUBMITION (2019-04-24 14:07:54) 
-- CODE:
a=input("descricao do brasao: ")
if(a=="lobo"):
	msg= ("Stark")
elif(a=="leao"):
	msg=("Lannister")
elif(a=="veado"):
	msg=("Baratheon")
elif(a=="dragao"):
	msg=("Targaryen")
elif(a=="rosa"):
	msg=("Tyrell")
elif(a=="sol"):
	msg=("Martell")
elif(a=="lula"):
	msg=("Greyjoy")
elif(a=="esfolado"):
	msg=("Bolton")
elif(a=="turta"):
	msg=("Tully")
else:
	msg=("Brasao invalido")
print("Entrada:", a)
print("Casa:", msg)

		
-- EXECUTION TIME:
0.133441
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Casa: Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:07:55) 
-- CODE:
a=input("descricao do brasao: ")
if(a=="lobo"):
	msg= ("Stark")
elif(a=="leao"):
	msg=("Lannister")
elif(a=="veado"):
	msg=("Baratheon")
elif(a=="dragao"):
	msg=("Targaryen")
elif(a=="rosa"):
	msg=("Tyrell")
elif(a=="sol"):
	msg=("Martell")
elif(a=="lula"):
	msg=("Greyjoy")
elif(a=="esfolado"):
	msg=("Bolton")
elif(a=="turta"):
	msg=("Tully")
else:
	msg=("Brasao invalido")
print("Entrada:", a)
print("Casa:", msg)

		
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:08:48) 
-- CODE:
a=input("descricao do brasao: ")
if(a=="lobo"):
	msg= ("Stark")
elif(a=="leao"):
	msg=("Lannister")
elif(a=="veado"):
	msg=("Baratheon")
elif(a=="dragao"):
	msg=("Targaryen")
elif(a=="rosa"):
	msg=("Tyrell")
elif(a=="sol"):
	msg=("Martell")
elif(a=="lula"):
	msg=("Greyjoy")
elif(a=="esfolado"):
	msg=("Bolton")
elif(a=="turta"):
	msg=("Tully")
else:
	msg=("Brasao invalido")
print("Entrada:", a)
print("Casa:", msg)

		
-- EXECUTION TIME:
0.139725
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Casa: Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:09:06) 
-- CODE:
a=input("descricao do brasao: ")
if(a=="lobo"):
	msg= ("Stark")
elif(a=="leao"):
	msg=("Lannister")
elif(a=="veado"):
	msg=("Baratheon")
elif(a=="dragao"):
	msg=("Targaryen")
elif(a=="rosa"):
	msg=("Tyrell")
elif(a=="sol"):
	msg=("Martell")
elif(a=="lula"):
	msg=("Greyjoy")
elif(a=="esfolado"):
	msg=("Bolton")
elif(a=="turta"):
	msg=("Tully")
else:
	msg=("Brasao invalido")
print("Entrada:", a)
print("Casa:", msg)

		
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:09:41) 
-- CODE:
a=input("descricao do brasao: ")
if(a=="lobo"):
	msg= ("Stark")
elif(a=="leao"):
	msg=("Lannister")
elif(a=="veado"):
	msg=("Baratheon")
elif(a=="dragao"):
	msg=("Targaryen")
elif(a=="rosa"):
	msg=("Tyrell")
elif(a=="sol"):
	msg=("Martell")
elif(a=="lula"):
	msg=("Greyjoy")
elif(a=="esfolado"):
	msg=("Bolton")
elif(a=="turta"):
	msg=("Tully")
else:
	msg=print("Brasao invalido")
print("Entrada:", a)
print("Casa:", msg)

		
-- EXECUTION TIME:
0.15727
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Brasao invalido
Entrada: tambaqui
Casa: None
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:09:41) 
-- CODE:
a=input("descricao do brasao: ")
if(a=="lobo"):
	msg= ("Stark")
elif(a=="leao"):
	msg=("Lannister")
elif(a=="veado"):
	msg=("Baratheon")
elif(a=="dragao"):
	msg=("Targaryen")
elif(a=="rosa"):
	msg=("Tyrell")
elif(a=="sol"):
	msg=("Martell")
elif(a=="lula"):
	msg=("Greyjoy")
elif(a=="esfolado"):
	msg=("Bolton")
elif(a=="turta"):
	msg=("Tully")
else:
	msg=print("Brasao invalido")
print("Entrada:", a)
print("Casa:", msg)

		
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:09:54) 
-- CODE:
a=input("descricao do brasao: ")
if(a=="lobo"):
	msg= ("Stark")
elif(a=="leao"):
	msg=("Lannister")
elif(a=="veado"):
	msg=("Baratheon")
elif(a=="dragao"):
	msg=("Targaryen")
elif(a=="rosa"):
	msg=("Tyrell")
elif(a=="sol"):
	msg=("Martell")
elif(a=="lula"):
	msg=("Greyjoy")
elif(a=="esfolado"):
	msg=("Bolton")
elif(a=="turta"):
	msg=("Tully")
else:
	msg=print("Brasao invalido")
print("Entrada:", a)
print("Casa:", msg)

		
-- EXECUTION TIME:
0.165859
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Brasao invalido
Entrada: tambaqui
Casa: None
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:10:00) 
-- CODE:
a=input("descricao do brasao: ")
if(a=="lobo"):
	msg= ("Stark")
elif(a=="leao"):
	msg=("Lannister")
elif(a=="veado"):
	msg=("Baratheon")
elif(a=="dragao"):
	msg=("Targaryen")
elif(a=="rosa"):
	msg=("Tyrell")
elif(a=="sol"):
	msg=("Martell")
elif(a=="lula"):
	msg=("Greyjoy")
elif(a=="esfolado"):
	msg=("Bolton")
elif(a=="turta"):
	msg=("Tully")
else:
	msg=print("Brasao invalido")
print("Entrada:", a)
print("Casa:", msg)

		
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:10:09) 
-- CODE:
a=input("descricao do brasao: ")
if(a=="lobo"):
	msg= ("Stark")
elif(a=="leao"):
	msg=("Lannister")
elif(a=="veado"):
	msg=("Baratheon")
elif(a=="dragao"):
	msg=("Targaryen")
elif(a=="rosa"):
	msg=("Tyrell")
elif(a=="sol"):
	msg=("Martell")
elif(a=="lula"):
	msg=("Greyjoy")
elif(a=="esfolado"):
	msg=("Bolton")
elif(a=="turta"):
	msg=("Tully")
else:
	msg=print("Brasao invalido")
print("Entrada:", a)
print("Casa:", msg)

		
-- EXECUTION TIME:
0.127626
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Brasao invalido
Entrada: tambaqui
Casa: None
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:11:31) 
-- CODE:
a=input("descricao do brasao: ")
if(a=="lobo"):
	msg= ("Stark")
elif(a=="leao"):
	msg=("Lannister")
elif(a=="veado"):
	msg=("Baratheon")
elif(a=="dragao"):
	msg=("Targaryen")
elif(a=="rosa"):
	msg=("Tyrell")
elif(a=="sol"):
	msg=("Martell")
elif(a=="lula"):
	msg=("Greyjoy")
elif(a=="esfolado"):
	msg=("Bolton")
elif(a=="turta"):
	msg=("Tully")
else:
	msg=("Brasao invalido")
print("Entrada:", a)
print("Casa:", msg)

		
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:11:39) 
-- CODE:
a=input("descricao do brasao: ")
if(a=="lobo"):
	msg= ("Stark")
elif(a=="leao"):
	msg=("Lannister")
elif(a=="veado"):
	msg=("Baratheon")
elif(a=="dragao"):
	msg=("Targaryen")
elif(a=="rosa"):
	msg=("Tyrell")
elif(a=="sol"):
	msg=("Martell")
elif(a=="lula"):
	msg=("Greyjoy")
elif(a=="esfolado"):
	msg=("Bolton")
elif(a=="turta"):
	msg=("Tully")
else:
	msg=("Brasao invalido")
print("Entrada:", a)
print("Casa:", msg)

		
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:12:54) 
-- CODE:
a=input("descricao do brasao: ")
if(a=="lobo"):
	msg= ("Stark")
elif(a=="leao"):
	msg=("Lannister")
elif(a=="veado"):
	msg=("Baratheon")
elif(a=="dragao"):
	msg=("Targaryen")
elif(a=="rosa"):
	msg=("Tyrell")
elif(a=="sol"):
	msg=("Martell")
elif(a=="lula"):
	msg=("Greyjoy")
elif(a=="esfolado"):
	msg=("Bolton")
elif(a=="turta"):
	msg=("Tully")
else:
	print("Brasao invalido")
print("Entrada:", a)
print("Casa:", msg)

		
-- EXECUTION TIME:
0.148505
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Brasao invalido
Entrada: tambaqui
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:13:01) 
-- CODE:
a=input("descricao do brasao: ")
if(a=="lobo"):
	msg= ("Stark")
elif(a=="leao"):
	msg=("Lannister")
elif(a=="veado"):
	msg=("Baratheon")
elif(a=="dragao"):
	msg=("Targaryen")
elif(a=="rosa"):
	msg=("Tyrell")
elif(a=="sol"):
	msg=("Martell")
elif(a=="lula"):
	msg=("Greyjoy")
elif(a=="esfolado"):
	msg=("Bolton")
elif(a=="turta"):
	msg=("Tully")
else:
	print("Brasao invalido")
print("Entrada:", a)
print("Casa:", msg)

		
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:13:34) 
-- CODE:
a=input("descricao do brasao: ")
if(a=="lobo"):
	msg= ("Stark")
elif(a=="leao"):
	msg=("Lannister")
elif(a=="veado"):
	msg=("Baratheon")
elif(a=="dragao"):
	msg=("Targaryen")
elif(a=="rosa"):
	msg=("Tyrell")
elif(a=="sol"):
	msg=("Martell")
elif(a=="lula"):
	msg=("Greyjoy")
elif(a=="esfolado"):
	msg=("Bolton")
elif(a=="turta"):
	msg=("Tully")
else:
	print("Brasao invalido")
print("Entrada: ", a)
print("Casa:", msg)

		
-- EXECUTION TIME:
0.105018
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Brasao invalido
Entrada:  tambaqui
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:15:50) 
-- CODE:
a=input("descricao do brasao: ")
if(a=="lobo"):
	msg= ("Stark")
elif(a=="leao"):
	msg=("Lannister")
elif(a=="veado"):
	msg=("Baratheon")
elif(a=="dragao"):
	msg=("Targaryen")
elif(a=="rosa"):
	msg=("Tyrell")
elif(a=="sol"):
	msg=("Martell")
elif(a=="lula"):
	msg=("Greyjoy")
elif(a=="esfolado"):
	msg=("Bolton")
elif(a=="turta"):
	msg=("Tully")
else:
	print("Brasao invalido")
print("Entrada:", a)
print("Casa:", msg)

		
-- EXECUTION TIME:
0.192175
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Brasao invalido
Entrada: tambaqui
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:15:51) 
-- CODE:
a=input("descricao do brasao: ")
if(a=="lobo"):
	msg= ("Stark")
elif(a=="leao"):
	msg=("Lannister")
elif(a=="veado"):
	msg=("Baratheon")
elif(a=="dragao"):
	msg=("Targaryen")
elif(a=="rosa"):
	msg=("Tyrell")
elif(a=="sol"):
	msg=("Martell")
elif(a=="lula"):
	msg=("Greyjoy")
elif(a=="esfolado"):
	msg=("Bolton")
elif(a=="turta"):
	msg=("Tully")
else:
	print("Brasao invalido")
print("Entrada:", a)
print("Casa:", msg)

		
-- EXECUTION TIME:
0.188535
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Brasao invalido
Entrada: tambaqui
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:15:51) 
-- CODE:
a=input("descricao do brasao: ")
if(a=="lobo"):
	msg= ("Stark")
elif(a=="leao"):
	msg=("Lannister")
elif(a=="veado"):
	msg=("Baratheon")
elif(a=="dragao"):
	msg=("Targaryen")
elif(a=="rosa"):
	msg=("Tyrell")
elif(a=="sol"):
	msg=("Martell")
elif(a=="lula"):
	msg=("Greyjoy")
elif(a=="esfolado"):
	msg=("Bolton")
elif(a=="turta"):
	msg=("Tully")
else:
	print("Brasao invalido")
print("Entrada:", a)
print("Casa:", msg)

		
-- EXECUTION TIME:
0.271661
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Brasao invalido
Entrada: tambaqui
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:15:51) 
-- CODE:
a=input("descricao do brasao: ")
if(a=="lobo"):
	msg= ("Stark")
elif(a=="leao"):
	msg=("Lannister")
elif(a=="veado"):
	msg=("Baratheon")
elif(a=="dragao"):
	msg=("Targaryen")
elif(a=="rosa"):
	msg=("Tyrell")
elif(a=="sol"):
	msg=("Martell")
elif(a=="lula"):
	msg=("Greyjoy")
elif(a=="esfolado"):
	msg=("Bolton")
elif(a=="turta"):
	msg=("Tully")
else:
	print("Brasao invalido")
print("Entrada:", a)
print("Casa:", msg)

		
-- EXECUTION TIME:
0.38982
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1671/1105/main.py", line 23, in <module>
    print("Casa:", msg)
NameError: name 'msg' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:15:51) 
-- CODE:
a=input("descricao do brasao: ")
if(a=="lobo"):
	msg= ("Stark")
elif(a=="leao"):
	msg=("Lannister")
elif(a=="veado"):
	msg=("Baratheon")
elif(a=="dragao"):
	msg=("Targaryen")
elif(a=="rosa"):
	msg=("Tyrell")
elif(a=="sol"):
	msg=("Martell")
elif(a=="lula"):
	msg=("Greyjoy")
elif(a=="esfolado"):
	msg=("Bolton")
elif(a=="turta"):
	msg=("Tully")
else:
	print("Brasao invalido")
print("Entrada:", a)
print("Casa:", msg)

		
-- EXECUTION TIME:
0.428922
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1671/1105/main.py", line 23, in <module>
    print("Casa:", msg)
NameError: name 'msg' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:15:52) 
-- CODE:
a=input("descricao do brasao: ")
if(a=="lobo"):
	msg= ("Stark")
elif(a=="leao"):
	msg=("Lannister")
elif(a=="veado"):
	msg=("Baratheon")
elif(a=="dragao"):
	msg=("Targaryen")
elif(a=="rosa"):
	msg=("Tyrell")
elif(a=="sol"):
	msg=("Martell")
elif(a=="lula"):
	msg=("Greyjoy")
elif(a=="esfolado"):
	msg=("Bolton")
elif(a=="turta"):
	msg=("Tully")
else:
	print("Brasao invalido")
print("Entrada:", a)
print("Casa:", msg)

		
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:17:20) 
-- CODE:
a=input("descricao do brasao: ")
if(a=="lobo"):
	msg= ("Stark")
elif(a=="leao"):
	msg=("Lannister")
elif(a=="veado"):
	msg=("Baratheon")
elif(a=="dragao"):
	msg=("Targaryen")
elif(a=="rosa"):
	msg=("Tyrell")
elif(a=="sol"):
	msg=("Martell")
elif(a=="lula"):
	msg=("Greyjoy")
elif(a=="esfolado"):
	msg=("Bolton")
elif(a=="turta"):
	msg=("Tully")
print("Casa: ", msg)
else:
	print("Brasao invalido")
print("Entrada: ", a)

	
-- ERROR:
File "XXXX", line 21
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:17:30) 
-- CODE:
a=input("descricao do brasao: ")
if(a=="lobo"):
	msg= ("Stark")
elif(a=="leao"):
	msg=("Lannister")
elif(a=="veado"):
	msg=("Baratheon")
elif(a=="dragao"):
	msg=("Targaryen")
elif(a=="rosa"):
	msg=("Tyrell")
elif(a=="sol"):
	msg=("Martell")
elif(a=="lula"):
	msg=("Greyjoy")
elif(a=="esfolado"):
	msg=("Bolton")
elif(a=="turta"):
	msg=("Tully")
   print("Casa: ", msg)
else:
	print("Brasao invalido")
print("Entrada: ", a)

	
-- ERROR:
File "XXXX", line 20
    print("Casa: ", msg)
                       ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:18:09) 
-- CODE:
a=input("descricao do brasao: ")
if(a=="lobo"):
	msg= ("Stark")
elif(a=="leao"):
	msg=("Lannister")
elif(a=="veado"):
	msg=("Baratheon")
elif(a=="dragao"):
	msg=("Targaryen")
elif(a=="rosa"):
	msg=("Tyrell")
elif(a=="sol"):
	msg=("Martell")
elif(a=="lula"):
	msg=("Greyjoy")
elif(a=="esfolado"):
	msg=("Bolton")
elif(a=="turta"):
	msg=("Tully")
else:
	print("Brasao invalido")
	
print("Entrada: ", a)
print("Casa: ", msg)

	
-- EXECUTION TIME:
0.156489
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa:  Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Brasao invalido
Entrada:  tambaqui
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa:  Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:18:36) 
-- CODE:
a=input("descricao do brasao: ")
if(a=="lobo"):
	msg= ("Stark")
elif(a=="leao"):
	msg=("Lannister")
elif(a=="veado"):
	msg=("Baratheon")
elif(a=="dragao"):
	msg=("Targaryen")
elif(a=="rosa"):
	msg=("Tyrell")
elif(a=="sol"):
	msg=("Martell")
elif(a=="lula"):
	msg=("Greyjoy")
elif(a=="esfolado"):
	msg=("Bolton")
elif(a=="turta"):
	msg=("Tully")
else:
	print("Entrada: ", a)
	print("Brasao invalido")
	
print("Entrada: ", a)
print("Casa: ", msg)

	
-- EXECUTION TIME:
0.125473
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa:  Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Brasao invalido
Entrada:  tambaqui
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa:  Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:18:46) 
-- CODE:
a=input("descricao do brasao: ")
if(a=="lobo"):
	msg= ("Stark")
elif(a=="leao"):
	msg=("Lannister")
elif(a=="veado"):
	msg=("Baratheon")
elif(a=="dragao"):
	msg=("Targaryen")
elif(a=="rosa"):
	msg=("Tyrell")
elif(a=="sol"):
	msg=("Martell")
elif(a=="lula"):
	msg=("Greyjoy")
elif(a=="esfolado"):
	msg=("Bolton")
elif(a=="turta"):
	msg=("Tully")
else:
	print("Entrada:", a)
	print("Brasao invalido")
	
print("Entrada:", a)
print("Casa: ", msg)

	
-- EXECUTION TIME:
0.182313
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa:  Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
Entrada: tambaqui
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa:  Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:18:46) 
-- CODE:
a=input("descricao do brasao: ")
if(a=="lobo"):
	msg= ("Stark")
elif(a=="leao"):
	msg=("Lannister")
elif(a=="veado"):
	msg=("Baratheon")
elif(a=="dragao"):
	msg=("Targaryen")
elif(a=="rosa"):
	msg=("Tyrell")
elif(a=="sol"):
	msg=("Martell")
elif(a=="lula"):
	msg=("Greyjoy")
elif(a=="esfolado"):
	msg=("Bolton")
elif(a=="turta"):
	msg=("Tully")
else:
	print("Entrada:", a)
	print("Brasao invalido")
	
print("Entrada:", a)
print("Casa: ", msg)

	
-- OUTPUT:
Entrada: lula
Casa:  Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:19:01) 
-- CODE:
a=input("descricao do brasao: ")
if(a=="lobo"):
	msg= ("Stark")
elif(a=="leao"):
	msg=("Lannister")
elif(a=="veado"):
	msg=("Baratheon")
elif(a=="dragao"):
	msg=("Targaryen")
elif(a=="rosa"):
	msg=("Tyrell")
elif(a=="sol"):
	msg=("Martell")
elif(a=="lula"):
	msg=("Greyjoy")
elif(a=="esfolado"):
	msg=("Bolton")
elif(a=="turta"):
	msg=("Tully")
else:
	print("Entrada:", a)
	print("Brasao invalido")
	
print("Entrada:", a)
print("Casa: ", msg)

	
-- EXECUTION TIME:
0.200648
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa:  Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
Entrada: tambaqui
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa:  Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:24:47) 
-- CODE:
a=input("descricao do brasao: ")
if(a=="lobo"):
	msg= ("Stark")
elif(a=="leao"):
	msg=("Lannister")
elif(a=="veado"):
	msg=("Baratheon")
elif(a=="dragao"):
	msg=("Targaryen")
elif(a=="rosa"):
	msg=("Tyrell")
elif(a=="sol"):
	msg=("Martell")
elif(a=="lula"):
	msg=("Greyjoy")
elif(a=="esfolado"):
	msg=("Bolton")
elif(a=="turta"):
	msg=("Tully")
else:
	print("Entrada:", a)
	print("Brasao invalido")
	
print("Entrada:", a)
print("Casa:", msg)

	
-- EXECUTION TIME:
0.164943
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
Entrada: tambaqui
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:26:20) 
-- CODE:
a=input("descricao do brasao: ")
if(a=="lobo"):
	msg= ("Stark")
elif(a=="leao"):
	msg=("Lannister")
elif(a=="veado"):
	msg=("Baratheon")
elif(a=="dragao"):
	msg=("Targaryen")
elif(a=="rosa"):
	msg=("Tyrell")
elif(a=="sol"):
	msg=("Martell")
elif(a=="lula"):
	msg=("Greyjoy")
elif(a=="esfolado"):
	msg=("Bolton")
elif(a=="turta"):
	msg=("Tully")
else:
	print("Entrada:", a)
	print("Brasao invalido")
	
print("Entrada:", a)
print("Casa:", msg)

	
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:29:54) 
-- CODE:
a=input("descricao do brasao: ")
if(a=="lobo"):
	msg= ("Stark")
	print("Casa:", msg)
elif(a=="leao"):
	msg=("Lannister")
	print("Casa:", msg)
elif(a=="veado"):
	msg=("Baratheon")
	print("Casa:", msg)
elif(a=="dragao"):
	msg=("Targaryen")
	print("Casa:", msg)
elif(a=="rosa"):
	msg=("Tyrell")
	print("Casa:", msg)
elif(a=="sol"):
	msg=("Martell")
	print("Casa:", msg)
elif(a=="lula"):
	msg=("Greyjoy")
	print("Casa:", msg)
elif(a=="esfolado"):
	msg=("Bolton")
	print("Casa:", msg)
elif(a=="turta"):
	msg=("Tully")
   print("Casa:", msg)
else:
	print("Entrada:", a)
	print("Brasao invalido")
	
print("Entrada:", a)


	
-- EXECUTION TIME:
0.134336
-- ERROR:
  File "/home/codebench/codes/1671/1105/main.py", line 28
    print("Casa:", msg)
                      ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:29:54) 
-- CODE:
a=input("descricao do brasao: ")
if(a=="lobo"):
	msg= ("Stark")
	print("Casa:", msg)
elif(a=="leao"):
	msg=("Lannister")
	print("Casa:", msg)
elif(a=="veado"):
	msg=("Baratheon")
	print("Casa:", msg)
elif(a=="dragao"):
	msg=("Targaryen")
	print("Casa:", msg)
elif(a=="rosa"):
	msg=("Tyrell")
	print("Casa:", msg)
elif(a=="sol"):
	msg=("Martell")
	print("Casa:", msg)
elif(a=="lula"):
	msg=("Greyjoy")
	print("Casa:", msg)
elif(a=="esfolado"):
	msg=("Bolton")
	print("Casa:", msg)
elif(a=="turta"):
	msg=("Tully")
   print("Casa:", msg)
else:
	print("Entrada:", a)
	print("Brasao invalido")
	
print("Entrada:", a)


	
-- ERROR:
File "XXXX", line 28
    print("Casa:", msg)
                      ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:31:44) 
-- CODE:
a=input("descricao do brasao: ")
print("Entrada: ", a)
if(a=="lobo"):
	msg= ("Stark")
	print("Casa:", msg)
elif(a=="leao"):
	msg=("Lannister")
	print("Casa:", msg)
elif(a=="veado"):
	msg=("Baratheon")
	print("Casa:", msg)
elif(a=="dragao"):
	msg=("Targaryen")
	print("Casa:", msg)
elif(a=="rosa"):
	msg=("Tyrell")
	print("Casa:", msg)
elif(a=="sol"):
	msg=("Martell")
	print("Casa:", msg)
elif(a=="lula"):
	msg=("Greyjoy")
	print("Casa:", msg)
elif(a=="esfolado"):
	msg=("Bolton")
	print("Casa:", msg)
elif(a=="turta"):
	msg=("Tully")
	print("Casa:", msg)
else:
	print("Brasao invalido")



	
-- EXECUTION TIME:
0.285023
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
